# arubaos-switch-port-map-to-excel

./: .env  .gitignore  README.md  ip_list_example.py  port_map().xlsx  port_map(172.31.10.1).xlsx  port_map(172.31.10.4).xlsx  port_map(172.31.10.5).xlsx  port_map(172.31.20.11).xlsx  port_map(172.31.20.12).xlsx  port_map(172.31.20.13).xlsx  port_map(172.31.21.11).xlsx  port_map(172.31.22.11).xlsx  port_map(172.31.22.12).xlsx  port_map(172.31.22.13).xlsx  port_map(172.31.22.14).xlsx  port_map.xlsx  pyproject.toml  requirements.txt  run.py  setup.py  ~$port_map(172.31.20.11).xlsx
aruba_rest/src/: deviceidentity.py  ip_static_route.py  loginOS.py  poe.py  ports.py  tn.py  vxlan.py
aruba_rest/workflows/create_port_map/: create_port_map.py  create_port_map_excel.py
data/: ip_list.py  ip_list_example.py
sample_response/: port.json  route.json  vlan.json  vlan_port.json  vsf.json
src/: loginOS.py  ports.py
tools/: base_url.py  colors.py  mask_text.py
workflows/create_port_map/: create_port_map.py  create_port_map_excel.py
