[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aruba_rest"
version = "0.1.0"
description = "Aruba OS REST API Interface"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "requests==2.33.1",
    "certifi>=2022.12.07",
    "chardet==3.0.4",
    "idna==2.6",
    "pyaml==17.10.0",
    "PyYAML>=5.4",
    "urllib3>=1.25.9",
    "xlrd==1.1.0",
    "XlsxWriter==1.0.2",
    "jinja2>=2.11.3",
    "python-dotenv>=1.0.0"
]

[tool.setuptools]
packages = ["aruba_rest"]
